# neural_network

./: CMakeLists.txt  README.md
examples/: plot.py
include/: dataset.h  linear.h  neural_network.h  operations.h  randomizer.h
src/: CMakeLists.txt  dataset.cpp  linear.cpp  main.cpp  neural_network.cpp
